Fix not scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  /*width: 100%;
-  height: 100%;*/
+  width: 100%;
+  height: 100%;
   background: #3D0E79;
   color: #FFF;
   display: flex;
@@ -131,6 +131,7 @@ body {
 
   #container {
     margin: 0;
+    -webkit-overflow-scrolling: touch;
   }
 
   #buttonWrapper {
